# fakeclock

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Todo.md  structure-todo.md
.github/workflows/: build.yml
dev/: Todo.md
dev/ext_docs/: timerfd.txt
include/: fakeclock.h
include/fakeclock/: ClockSimulator.h  common.h  fakeclock.h
scripts/: extract_readme_example.py  github_activity.py
src/: ClockSimulator.cpp  fakeclock.cpp  overrides.cpp  posix_timers.cpp
tests/: test_ClockSimulator.cpp  test_boost.cpp  test_clock_nanosleep.cpp  test_fakeclock.cpp  test_gettime.cpp  test_helpers.h  test_posix_timer.cpp  test_settime.cpp  test_sleep.cpp  test_socket_timeout.cpp  test_timerfd.cpp
